--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>org.wso2.siddhi</groupId>
       <artifactId>siddhi-extension-string</artifactId>
-      <version>3.1.3-SNAPSHOT</version>
+      <version>3.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.wso2.siddhi</groupId>
