--- a/pom.xml
+++ b/pom.xml
@@ -24,17 +24,17 @@
       <version>4.10</version>
       <scope>test</scope>
     </dependency>
-      <!--<dependency>-->
-          <!--<groupId>org.apache.jena</groupId>-->
-          <!--<artifactId>apache-jena-libs</artifactId>-->
-          <!--<type>pom</type>-->
-          <!--<version>2.12.1</version>-->
-      <!--</dependency>-->
       <dependency>
+          <groupId>org.apache.jena</groupId>
+          <artifactId>apache-jena-libs</artifactId>
+          <type>pom</type>
+          <version>2.12.1</version>
+      </dependency>
+      <!--<dependency>
           <groupId>com.hp.hpl.jena</groupId>
           <artifactId>jena</artifactId>
           <version>2.5.5</version>
-      </dependency>
+      </dependency>-->
       <dependency>
           <groupId>org.apache.jena</groupId>
           <artifactId>jena-osgi</artifactId>
