--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <junit.version>4.11</junit.version>
     </properties>
 
+
+
     <dependencies>
 
         <dependency>
@@ -70,6 +72,11 @@
             <artifactId>siddhi-extension-timeseries</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.siddhi</groupId>
+            <artifactId>siddhi-tcp-transport</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.log4j.wso2</groupId>
@@ -87,11 +94,11 @@
             <artifactId>disruptor</artifactId>
             <version>3.3.2.wso2v2</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>org.wso2.orbit.com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.3.2.wso2v2</version>
-        </dependency>
+        </dependency> -->
 
 
     </dependencies>
@@ -117,6 +124,21 @@
             <name>University Leipzig, AKSW Maven2 Repository</name>
             <url>http://maven.aksw.org/repository/snapshots</url>
         </repository>
+        <!-- WSO2 Snapshot artifact repository -->
+        <repository>
+            <id>wso2.snapshots</id>
+            <name>WSO2 Snapshot Repository</name>
+            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
+
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+
     </repositories>
 
     <build>
