Adding comments to alertgeneratormultinode

--- a/pom.xml
+++ b/pom.xml
@@ -232,7 +232,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>org.wso2.siddhi.debs2017.input.rabbitmq.NewTask</mainClass>
+                            <mainClass>org.wso2.siddhi.debs2017.query.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
