--- a/pom.xml
+++ b/pom.xml
@@ -235,7 +235,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>org.wso2.siddhi.debs2017.query.Main</mainClass>
+                            <mainClass>org.wso2.siddhi.debs2017.query.CentralDispatcher</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
